--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,7 @@
 .app {
     height: 100vh;
-    background-color: pink;
+    background-image: linear-gradient(to left top, #001111, #011616, #021a19, #021d1d, #002121);
+    background-color: rgb(0, 17, 17);
+    text-align: center;
+    color: rgb(224, 253, 253);
 }
