--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,6 +1,19 @@
 footer {
-    background-color: red;
+    background-color:  #000a0a;
     position: fixed;
     bottom: 0;
     width: 100vw;
+}
+
+.footer-icon {
+    margin: 0 0.5em;
+}
+
+footer a {
+    color:  rgb(66, 255, 224, 0.5);
+    transition: all 0.5s;
+}
+
+footer a:hover {
+    color:  rgb(66, 255, 224)
 }
