--- a/frontend/src/components/Main/Main.css
+++ b/frontend/src/components/Main/Main.css
@@ -15,6 +15,11 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+    .main {
+        height: 80vh;
+    }
 }
